@@ -27,14 +27,6 @@ the GNU MP Library test suite.  If not, see https://www.gnu.org/licenses/.  */
 #define MAX_WORD_SIZE 10
 
 static void
-dump (const char *label, const mpz_t x)
-{
-  char *buf = mpz_get_str (NULL, 16, x);
-  fprintf (stderr, "%s: %s\n", label, buf);
-  testfree (buf);
-}
-
-static void
 dump_bytes (const char *label, const unsigned char *s, size_t n)
 {
   size_t i;
